--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+.diff {
+	text-align: center;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-column-gap: 1rem;
+	max-width: 100vw;
+	overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.diff > div {
+	max-width: calc((100vw - 1rem) / 2);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.diff img {
+	max-width: 800px;
+	height: 400px;
+	margin-bottom: 2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.diff .textLine {
+	margin-bottom: 1rem;
 }
 
-.App-link {
-  color: #61dafb;
+.App > div {
+	box-sizing: border-box;
+	padding: 4rem;
+	padding-top: 0rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App > .button {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	margin: 2rem 0;
+	padding: 0;
+}
+
+.App > .button > button {
+	padding: 0.5rem;
 }
